@@ -146,6 +146,14 @@ let mkexp_constraint e (t1, t2) =
   | _, Some t -> ghexp(Pexp_coerce(e, t1, t))
   | None, None -> assert false
 
+let mkexp_opt_constraint e = function
+  | None -> e
+  | Some constraint_ -> mkexp_constraint e constraint_
+
+let mkpat_opt_constraint p = function
+  | None -> p
+  | Some typ -> mkpat (Ppat_constraint(p, typ))
+
 let array_function par assign=
   let op = if assign then par^"<-" else par in
   ghloc ( Lident op )
@@ -1573,10 +1581,10 @@ lbl_expr_list:
   |  lbl_expr SEMI { [$1] }
 ;
 lbl_expr:
-    label_longident EQUAL expr
-      { (mkrhs $1 1,$3) }
-  | label_longident
-      { (mkrhs $1 1, exp_of_label $1 1) }
+    label_longident opt_type_constraint EQUAL expr
+      { (mkrhs $1 1, mkexp_opt_constraint $4 $2) }
+  | label_longident opt_type_constraint
+      { (mkrhs $1 1, mkexp_opt_constraint (exp_of_label $1 1) $2) }
 ;
 field_expr_list:
     field_expr opt_semi { [$1] }
@@ -1598,6 +1606,10 @@ type_constraint:
   | COLONGREATER core_type                      { (None, Some $2) }
   | COLON error                                 { syntax_error() }
   | COLONGREATER error                          { syntax_error() }
+;
+opt_type_constraint:
+    type_constraint { Some $1 }
+  | /* empty */ { None }
 ;
 
 /* Patterns */
@@ -1704,10 +1716,14 @@ lbl_pattern_list:
       { let (fields, closed) = $3 in $1 :: fields, closed }
 ;
 lbl_pattern:
-    label_longident EQUAL pattern
-      { (mkrhs $1 1,$3) }
-  | label_longident
-      { (mkrhs $1 1, pat_of_label $1 1) }
+    label_longident opt_pattern_type_constraint EQUAL pattern
+     { (mkrhs $1 1, mkpat_opt_constraint $4 $2) }
+  | label_longident opt_pattern_type_constraint
+     { (mkrhs $1 1, mkpat_opt_constraint (pat_of_label $1 1) $2) }
+;
+opt_pattern_type_constraint:
+    COLON core_type { Some $2 }
+  | /* empty */ { None }
 ;
 
 /* Value descriptions */
